--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+/* @layer base {
   h1 {
     @apply font-bold text-3xl;
   }
   a {
     @apply underline font-bold;
   }
-}
+} */
